# EcommerceAPI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00d2e9dee043_add_auth_tables.py  3613d2678e2a_add_orders_tables.py  3c939e7a9a30_add_categories_third_try.py  4f486027fe1f_add_timestamps_to_categories.py  5512c68af3e6_create_categories.py  7d53762ededa_add_category.py  c6ea9a4f14cb_create_products.py  e93dfe39336a_add_category_second_try.py
docker/db/dump/: dev.dump
docker/db/init/: 01-create-test-db.sql
ecommerceapi/: main.py
ecommerceapi/api/: router.py
ecommerceapi/api/routes/: auth.py  category.py  order.py  product.py
ecommerceapi/core/: auth.py  celery.py  celery_tasks.py  config.py  exceptions.py  logging.py  security.py
ecommerceapi/db/: base.py  database.py
ecommerceapi/models/: __init__.py  address.py  category.py  enums.py  order.py  order_billings.py  order_items.py  product.py  refresh_token.py  user.py
ecommerceapi/repositories/: address.py  category.py  order.py  product.py  refresh_token.py  user.py
ecommerceapi/schemas/: address.py  category.py  general.py  order.py  product.py  security.py  user.py
ecommerceapi/serializers/: product_serializer.py
ecommerceapi/services/: category.py  order_service.py  security_service.py
tests/: conftest.py  test_auth.py  test_categories.py  test_orders.py  test_products.py
tests/factories/: category_factory.py  product_factory.py  user_factory.py
